# doit_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  doit.conf  justfile
src/: cli.yml  main.rs  pam.rs  shadow.rs
src/pam/: mod.rs  pam_wrapper.rs
src/pam_mod/: mod.rs  pam.rs  pam_appl_bindings.rs  pam_bindings.rs  pam_misc.rs
src/shadow_mod/: mod.rs
