[package]
name = "doit"
version = "0.2.0"
edition = "2021"
description = "A simple privledge escalation program"
repository = "https://github.com/AdamPayzant/doit_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "5.0.1"
libc = "0.2.112"
pwhash = "1.0.0"
whoami = "1.4.0"
